@@ -575,3 +575,4 @@ seen. gmtime warning still there
 - Fixed a codemastr screwup in quarantine code
 - Removed the old SOCKS check code.
 - Fixed a quarantine bug
+- Fixed some scan-socks and blackhole fuckups
